@@ -446,6 +446,9 @@ class elementObj::implObj : public element_drawObj,
 	//! Install a state update callback.
 	void on_state_update(const functionref<element_state_callback_t> &cb);
 
+	//! Install a state update callback.
+	void on_state_update(ONLY IN_THREAD,
+			     const functionref<element_state_callback_t> &cb);
 	//! Install a metrics update callback.
 
 	void on_metrics_update(const functionref<metrics_update_callback_t>
