@@ -22,6 +22,26 @@ This display element represents a menu in a menu bar, a container
 with \ref listlayoutmanager "list layout manager" that manages the items
 in the menu.
 
+\code
+INSERT_LIBX_NAMESPACE::w::listlayoutmanager lm=m->get_layoutmanager();
+\endcode
+
+get_layoutmanager() returns the
+\ref listlayoutmanager "list layout manager" for the popup menu.
+
+\code
+m->on_popup_state_update([]
+                         (ONLY IN_THREAD,
+                          const INSERT_LIBX_NAMESPACE::w::element_state &s,
+                          const INSERT_LIBX_NAMESPACE::w::busy &mcguffin)
+                         {
+                         });
+\endcode
+
+This installs an on_state_update() callback for the menu's popup window.
+See \ref element "on_state_update()" for more information. This provides the
+means of having a callback invoked whenever the popup menu is shown or hidden.
+
 */
 
 typedef ref<menuObj> menu;
